test/zinc_source/compile_errors/rust_interop/06_missing_extern_declaration.zn
// expected-error: missing extern declaration for Rust function 'max'
extern rust {
    use std::cmp::max;
}

fn main() {
    print(max(1, 2))
}
